force-app/main/default/objects/RC_event__c/fields/aptiEasy__c.field-meta.xml
<CustomField>
    <fullName>aptiEasy__c</fullName>
    <label>aptiEasy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>