force-app/main/default/objects/RC_event__c/fields/aptiMeduim__c.field-meta.xml
<CustomField>
    <fullName>aptiMeduim__c</fullName>
    <label>aptiMeduim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>