force-app/main/default/objects/RC_event__c/fields/CEasy__c.field-meta.xml
<CustomField>
    <fullName>CEasy__c</fullName>
    <label>CEasy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>