force-app/main/default/objects/RC_event__c/fields/CMeduim__c.field-meta.xml
<CustomField>
    <fullName>CMeduim__c</fullName>
    <label>CMeduim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>