force-app/main/default/objects/RC_event__c/fields/Colleges__c.field-meta.xml
<CustomField>
    <fullName>Colleges__c</fullName>
    <label>Colleges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yenepoya Institute of Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>