force-app/main/default/objects/RC_event__c/fields/cutoff__c.field-meta.xml
<CustomField>
    <fullName>cutoff__c</fullName>
    <label>cutoff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>