force-app/main/default/objects/RC_event__c/fields/event_date__c.field-meta.xml
<CustomField>
    <fullName>event_date__c</fullName>
    <label>Event_date</label>
    <type>Date</type>
</CustomField>