force-app/main/default/objects/RC_event__c/fields/event_duration__c.field-meta.xml
<CustomField>
    <fullName>event_duration__c</fullName>
    <label>Event Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>