force-app/main/default/objects/RC_event__c/fields/event_id__c.field-meta.xml
<CustomField>
    <fullName>event_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>As credentials similar to an event password</description>
    <label>event id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>