force-app/main/default/objects/RC_event__c/fields/event_location__c.field-meta.xml
<CustomField>
    <fullName>event_location__c</fullName>
    <label>Event Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>