force-app/main/default/objects/RC_event__c/fields/event_start_time__c.field-meta.xml
<CustomField>
    <fullName>event_start_time__c</fullName>
    <label>Event_start_time</label>
    <type>Time</type>
</CustomField>