force-app/main/default/objects/RC_event__c/fields/setSize__c.field-meta.xml
<CustomField>
    <fullName>setSize__c</fullName>
    <description>Stores the size of the question set. Ex: 30,40 etc</description>
    <label>setSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>